--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -29,7 +29,7 @@ $global-border-radius: 10px;
 $alignments-h:
 	(space-between, space-between),
 	(space-around, space-around),
-	(flex-start, start),
+	(flex-start, flex-start),
 	(flex-end, end),
 	(center, center),
 	(stretch, stretch);
@@ -37,7 +37,7 @@ $alignments-h:
 $alignments-v:
 	(space-between, space-between),
 	(space-around, space-around),
-	(flex-start, start),
+	(flex-start, flex-start),
 	(flex-end, end),
 	(center, center),
 	(stretch, stretch);
