Add setloader and input componentns

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,6 +18,8 @@ $grey-dark: #4E5A5E;
 $grey-darker: #2E373A;
 $grey-darkest: #1C2326;
 
+$bg: $grey-darkest;
+
 $gap: 16px;
 
 $font-size-default: 16px;
