Add socket status componennt

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,6 +18,10 @@ $grey-dark: #4E5A5E;
 $grey-darker: #2E373A;
 $grey-darkest: #1C2326;
 
+$danger: #C95454;
+$warning: #DDA158;
+$success: #9DB260;
+
 $bg: $grey-darkest;
 
 $gap: 16px;
